Section 9 completed. Identity

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,9 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=store.db"
+  },
+
+  "JWTSettings": {
+    "TokenKey": "WEYGZH2K4M5N7Q8R9TBUCVEXFY"
   }
 }
